apps/immich/templates/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: immich
  annotations:
    volsync.backube/privileged-movers: 'true'
